test/expressions/calls/CallParenlessWithParens.good
CallParenlessWithParens.chpl:3: In function 'test':
CallParenlessWithParens.chpl:4: error: unresolved access of 'int(64)' by '()'
